--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 
 name = "rtoys"
-version = "0.0.1"
+version = "0.0.2"
+edition = "2021"
 authors = ["Shailesh Kumar <shailesh@indigits.com>"]
 
 
@@ -25,15 +26,6 @@ debug = true
 opt-level = 3
 debug = false
 
-# The documentation profile, used for `cargo doc`
-[profile.doc]
-opt-level = 0
-debug = true
-
 [lib]
 name = "rtoys"
-
-
-[[bin]]
-name = "rtoys_demo"
 
